#pragma once

class InputQueue
{
public:
    InputQueue() {}
    ~InputQueue() {}
};
