#pragma once

class OutputQueue
{
public:
    OutputQueue() {}
    ~OutputQueue() {}
};
